# pyptex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  pyptex.html  setup.py
.github/: CODE_OF_CONDUCT.md  pull_request_template.md
examples/: example.pyptexgold  example.tex  matrixinverse.pyptexgold  matrixinverse.tex  plots.pyptexgold  plots.tex  pptest.tex  showtest.tex
hooks/: commit-msg  pre-commit
html/: pyptex.html
pyptex/: __init__.py  __main__.py
scripts/: make-pypi-release  makechangelog  pdflatex  pyptex
tests/: runtest  runtests
tests/test1/: plot1.tex  plot2.tex  test1.tex  test2.tex
tests/test1/testgold1/: plot2.pyptex  test.pyplog  test.pyptex
tests/test1/testgold2/: plot1.pyptex  plot2.pyptex  test.pyplog  test.pyptex
tests/test2/: test2.tex  test4.tex
tests/test2/testgold1/: test.pyplog
tests/test2/testgold2/: test.pyptex
tests/test2/testgold3/: test.pyplog
tests/test2/testgold4/: test.pyplog  test.pyptex
tests/test3/: test3.tex
tests/test3/testgold1/: test.pyplog
tests/test3/testgold2/: test.pyplog
tests/test3/testgold3/: test.pyplog
tests/test3/testgold4/: test.pyplog  test.pyptex
tests/test4/: test2.tex
tests/test4/testgold1/: test.pyplog
tests/test4/testgold3/: test.pyplog  test.pyptex
tests/test4/testgold4/: test.pyplog
tests/test5/: sub.tex  test1.fdb_latexmk  test1.fls  test1.tex
tests/test5/testgold1/: test.pyplog  test.pyptex
